--- a/index.html
+++ b/index.html
@@ -88,15 +88,6 @@
                 <h1><span>L</span>ets <span>S</span>erv - это</h1>
                 <h2><span>П</span>ланирование и реализация вашей IT инфрастукруры</h2>
                 <p><span>М</span>ы  подберем вам  подходящее оборудование и настроим его под ваши нужды</p>
-                <div class="our_clients">
-                    <img src="assets/imges/logo.com/Stolichka.png" alt="">
-                    <img src="assets/imges/logo.com/Matrix.jfif" alt="">
-                    <img src="assets/imges/logo.com/neofarm.jpg" alt="">
-                    <img src="assets/imges/logo.com/Prof.png" alt="">
-                    <img src="assets/imges/logo.com/Samokat.png" alt="">
-                    <img src="assets/imges/logo.com/ShKI.png" alt="">
-                    <img src="assets/imges/logo.com/TsOPP.jpg" alt="">
-                </div>
                 <a class="btn_form_form" href="forms.html">Заказать консультацию</a>
             </div>
             <div class="svg__about_content-one">
@@ -138,6 +129,24 @@
     <section class="container__form-contact standard_container bg_content indent">
         <h1><span>О</span>птимизируй / Созндай свою IT-инфраструктуру</h1>
         <a class="btn_form_form op__" href="forms.html">Заказать консультацию</a>
+    </section>
+    <section class="container__about_cooperation standard_container bg_content indent">
+        <div class="content_customers">
+            <h1><span>Н</span>аши заказчики</h1>
+            <div class="our_clients">
+                <img src="assets/imges/logo.com/Stolichka.png" alt="">
+                <img src="assets/imges/logo.com/Matrix.jfif" alt="">
+                <img src="assets/imges/logo.com/neologo.png" alt="">
+                <img src="assets/imges/logo.com/Prof.png" alt="">
+                <img src="assets/imges/logo.com/Samokat.png" alt="">
+                <img src="assets/imges/logo.com/ShKI.png" alt="">
+                <img src="assets/imges/logo.com/TsOPP.jpg" alt="">
+            </div>
+        </div>
+        <div class="line"></div>
+        <div class="content_partners">
+            <h1><span>Н</span>аши партнёры</h1>
+        </div>
     </section>
     <section class="container__advantages standard_container bg_content">
         <h1 class="indent"><span>Н</span>аши преимущества</h1>
@@ -374,35 +383,6 @@
             <div class="text__solving_problems">
                 <h1><span>Ч</span>астые сбои и инциденты</h1>
                 <p><span>Р</span>егулярные технические проблемы негативно сказываются на производительности команды и лояльности клиентов, что может привести к потерям</p>
-            </div>
-        </div>
-    </section>
-    <section class="container__comment standard_container bg_content indent">
-        <h1><span>Ч</span>то говорят клиенты о нас</h1>
-        <div class="coments__wrapper__advantages">
-            <div class="com_card">
-                <h1><span>В</span>ПК</h1>
-                <p><span>В</span>се гуд гуд гуд гуд гуд гуд жук жук жук жужу жужу пиу пиу виу виу. Ну все круто короче.</p>
-            </div>
-            <div class="com_card">
-                <h1><span>В</span>ПК</h1>
-                <p><span>В</span>се гуд гуд гуд гуд гуд гуд жук жук жук жужу жужу пиу пиу виу виу. Ну все круто короче.</p>
-            </div>
-            <div class="com_card">
-                <h1><span>В</span>ПК</h1>
-                <p><span>В</span>се гуд гуд гуд гуд гуд гуд жук жук жук жужу жужу пиу пиу виу виу. Ну все круто короче.</p>
-            </div>
-            <div class="com_card">
-                <h1><span>В</span>ПК</h1>
-                <p><span>В</span>се гуд гуд гуд гуд гуд гуд жук жук жук жужу жужу пиу пиу виу виу. Ну все круто короче.</p>
-            </div>
-            <div class="com_card">
-                <h1><span>В</span>ПК</h1>
-                <p><span>В</span>се гуд гуд гуд гуд гуд гуд жук жук жук жужу жужу пиу пиу виу виу. Ну все круто короче.</p>
-            </div>
-            <div class="com_card">
-                <h1><span>В</span>ПК</h1>
-                <p><span>В</span>се гуд гуд гуд гуд гуд гуд жук жук жук жужу жужу пиу пиу виу виу. Ну все круто короче.</p>
             </div>
         </div>
     </section>
