--- a/stands.html
+++ b/stands.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Учебные it стенды от Lets Serv</title>
+    <title>Учебные стенды от Lets Serv</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/imges/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/imges/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/imges/favicon/favicon-16x16.png">
@@ -75,7 +75,7 @@
             <div class="container_nav">
                 <ul>
                     <li><a href="services.html"><span>У</span>слуги</a></li>
-                    <li><a href="#"><span>У</span>чебные IT стенды</a></li>
+                    <li><a href="#"><span>У</span>чебные стенды</a></li>
                     <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
                     <li><a href="forms.html"><span>К</span>онтакты</a></li>
                 </ul>
@@ -85,9 +85,8 @@
     <section class="container__stands bg_content standard_container container__bg_gradient indent">
         <div class="contetn__stands_one standard_content content_info">   
             <div>
-                <h1><span>I</span>T cтенды для обучения</h1>
-                <p><span>Э</span>то будет лучший вариант для обучения ваших учиников. 
-                    Стенды из качественных материалов и востребованных комплектующих на сегодняшний день.</p>   
+                <h1><span>У</span>чебные cтенды для обучения</h1>
+                <p><span>С</span>тенды из качественных материалов и востребованных комплектующих на сегодняшний день.</p>   
                 <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>
             </div>
             <div class="img__swap_stand">
@@ -341,12 +340,7 @@
     </section>
     <footer class="footer standard_container bg_content indent">
         <h1><span>L</span>ets <span>S</span>erv</h1>
-        <div>
-            <p>ИП Бараков Владислав Юрьевич <span>ИНН 332904921623</span></p> 
-            <a href="tel:+79157792861" ><span>Тел.</span> +7(915) 779 28-61</a>
-        </div>
-        <p>Владимирская область, г.Владимир, ул.Большая Нижегородская, д.34Б, офис 220.</p>
-        <p>letsserv@yandex.ru</p>
+        <p>Все права защищены 2022-2024</p>
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
