--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="container_nav">
                 <ul>
                     <li><a href="services.html"><span>У</span>слуги</a></li>
-                    <li><a href="stands.html"><span>У</span>чебные IT стенды</a></li>
+                    <li><a href="stands.html"><span>У</span>чебные стенды</a></li>
                     <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
                     <li><a href="forms.html"><span>К</span>онтакты</a></li>
                 </ul>
@@ -126,26 +126,16 @@
             <img src="assets/imges/Puzzle.png" alt="">                               
         </div>
     </section>
-    <section class="container__form-contact standard_container bg_content indent">
-        <h1><span>О</span>птимизируй / Созндай свою IT-инфраструктуру</h1>
-        <a class="btn_form_form op__" href="forms.html">Заказать консультацию</a>
-    </section>
     <section class="container__about_cooperation standard_container bg_content indent">
         <div class="content_customers">
-            <h1><span>Н</span>аши заказчики</h1>
             <div class="our_clients">
                 <img src="assets/imges/logo.com/Stolichka.png" alt="">
-                <img src="assets/imges/logo.com/Matrix.jfif" alt="">
+                <img src="assets/imges/logo.com/Matrix.png" alt="">
                 <img src="assets/imges/logo.com/neologo.png" alt="">
-                <img src="assets/imges/logo.com/Prof.png" alt="">
                 <img src="assets/imges/logo.com/Samokat.png" alt="">
                 <img src="assets/imges/logo.com/ShKI.png" alt="">
-                <img src="assets/imges/logo.com/TsOPP.jpg" alt="">
+                <img src="assets/imges/logo.com/TsOPP.png" alt="">
             </div>
-        </div>
-        <div class="line"></div>
-        <div class="content_partners">
-            <h1><span>Н</span>аши партнёры</h1>
         </div>
     </section>
     <section class="container__advantages standard_container bg_content">
@@ -256,6 +246,19 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="containret__our_partners standard_container bg_content indent">
+        <h1><span>П</span>артнёры</h1>
+            <div class="our_partners">
+                <img src="assets/imges/logo.com/sigur.png" alt="">
+                <img src="assets/imges/logo.com/Kiber.png" alt="">
+                <img src="assets/imges/logo.com/Astra.png" alt="">
+                <img src="assets/imges/logo.com/redsoft.png" alt="">
+            </div>
+    </section>
+    <section class="container__form-contact standard_container bg_content indent">
+        <h1><span>О</span>птимизируй / Созндай свою IT-инфраструктуру</h1>
+        <a class="btn_form_form op__" href="forms.html">Заказать консультацию</a>
     </section>
     <section class="container__solving_problems standard_container bg_content indent">
         <h1><span>К</span>акие проблемымы решаем?</h1>
@@ -386,6 +389,9 @@
             </div>
         </div>
     </section>
+    <section class="container__diplomas standard_container bg_content indent">
+
+    </section>
     <section class="container__form standard_container bg_content indent">
         <div class="form__content_">
             <div class="text__form_content">
@@ -438,12 +444,7 @@
     </section>
     <footer class="footer standard_container bg_content indent">
         <h1><span>L</span>ets <span>S</span>erv</h1>
-        <div>
-            <p>ИП Бараков Владислав Юрьевич <span>ИНН 332904921623</span></p> 
-            <a href="tel:+79157792861" ><span>Тел.</span> +7(915) 779 28-61</a>
-        </div>
-        <p>Владимирская область, г.Владимир, ул.Большая Нижегородская, д.34Б, офис 220.</p>
-        <p>letsserv@yandex.ru</p>
+        <p>Все права защищены 2022-2024</p>
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
