--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
             <div class="container_nav">
                 <ul>
                     <li><a href="#"><span>У</span>слуги</a></li>
-                    <li><a href="stands.html"><span>У</span>чебные IT стенды</a></li>
+                    <li><a href="stands.html"><span>У</span>чебные стенды</a></li>
                     <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
                     <li><a href="forms.html"><span>К</span>онтакты</a></li>
                 </ul>
@@ -119,12 +119,7 @@
     </section>
     <footer class="footer standard_container bg_content indent">
         <h1><span>L</span>ets <span>S</span>erv</h1>
-        <div>
-            <p>ИП Бараков Владислав Юрьевич <span>ИНН 332904921623</span></p> 
-            <a href="tel:+79157792861" ><span>Тел.</span> +7(915) 779 28-61</a>
-        </div>
-        <p>Владимирская область, г.Владимир, ул.Большая Нижегородская, д.34Б, офис 220.</p>
-        <p>letsserv@yandex.ru</p>
+        <p>Все права защищены 2022-2024</p>
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
