--- a/stands.html
+++ b/stands.html
@@ -193,14 +193,14 @@
                             </div>
                         </div>
                         <div class="about__stand_t">
-                            <div class="text__st">
-                                <p id="aboutStand"></p>
-                            </div>
                             <div class="open__card_btn-st">
                                 <button class="btn_form_form">Смотреть обзор</button>
                                 <a class="btn_form_form" href="forms.html">Заказать стенд</a>
-                            </div>
+                            </div>                            
                         </div>
+                    </div>
+                    <div class="text__st">
+                        <pre id="aboutStand"></pre>
                     </div>
                 </div>
             </div>
