--- a/stands.html
+++ b/stands.html
@@ -87,7 +87,7 @@
             <div>
                 <h1><span>У</span>чебные cтенды для обучения</h1>
                 <p><span>С</span>тенды из качественных материалов и востребованных комплектующих на сегодняшний день.</p>   
-                <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>
+                <p><span>Н</span>а нашем канале можно посмотреть <a target="_blank" href="https://rutube.ru/channel/26784998/">обзоры</a></p>
             </div>
             <div class="img__swap_stand">
                 <img class="img_1" src="assets/imges/oval.png" alt="">
@@ -148,7 +148,7 @@
                         </div>
                         <div class="about__stand_t">
                             <div class="open__card_btn-st">
-                                <button class="btn_form_form">Смотреть обзор</button>
+                                <a id="hrefStand" href="##" target="_blank" class="btn_form_form">Смотреть обзор</a>
                                 <a class="btn_form_form" href="forms.html">Заказать стенд</a>
                             </div>                            
                         </div>
