--- a/monitoring.html
+++ b/monitoring.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>«Lets serv» —  DevOps-услуги, миграция инфраструктуры, it мониторинга, CI/CD под ключ</title>
     <meta name="description" content="Услуги DevOps-инженеров: настройка CI/CD, миграция в Kubernetes и cloud. Аудит и поддержка ИТ-инфраструктуры 24/7.">
