--- a/forms.html
+++ b/forms.html
@@ -289,15 +289,7 @@
         </div>
       </div>
     </header>
-    <section
-      class="
-        container__form
-        standard_container
-        bg_content
-        st__form_control
-        indent
-      "
-    >
+    <section class="container__form standard_container bg_content st__form_control indent">
       <div class="form__content_">
         <div class="text__form_content">
           <h1><span>О</span>бсудим ваш проект?</h1>
