--- a/monitoring.html
+++ b/monitoring.html
@@ -289,14 +289,7 @@
         </div>
       </div>
     </header>
-    <section
-      class="
-        bg_content
-        standard_container
-        container__monitoring_about container__bg_gradient
-        indent
-      "
-    >
+    <section class="bg_content standard_container container__monitoring_about container__bg_gradient indent">
       <div
         class="
           contetn__about_one
