--- a/stands.html
+++ b/stands.html
@@ -289,15 +289,7 @@
         </div>
       </div>
     </header>
-    <section
-      class="
-        container__stands
-        bg_content
-        standard_container
-        container__bg_gradient
-        indent
-      "
-    >
+    <section class="container__stands bg_content standard_container container__bg_gradient indent">
       <div class="contetn__stands_one standard_content content_info">
         <div>
           <h1><span>У</span>чебные cтенды для обучения</h1>
