--- a/forms.html
+++ b/forms.html
@@ -313,34 +313,15 @@
             </a>
           </div>
         </div>
-        <div class="container__form_card">
-          <div>
-            <input type="text" placeholder="Ваше имя" />
-            <input type="text" placeholder="Ваш номер телефона" />
-            <input type="text" placeholder="E-mail" />
-            <input type="text" placeholder="Компания" />
-            <div style="display: flex">
-              <input type="checkbox" checked />
-              <p><span>П</span>одтвердите отправку</p>
-            </div>
-            <button>Отправить</button>
-          </div>
-        </div>
-        <form class="obratnuj-zvonok" autocomplete="off" action='email.php' method='post'>
-            <div class="form-zvonok"> 
-                <div>
-                    <label>Имя <span>*</span></label>
-                    <input type='text' name='username' required></div>
-                <div>
-                    <label>Номер телефона (с кодом) <span>*</span></label>
-                    <input type='text' name='usernumber' required></div>
-                <div>
-                    <label>Сообщение</label>
-                    <input type='text' name='question'>
-                </div>
-                <input class="bot-send-mail" type='submit' value='Послать заявку'>
-            </div>
-        </form>
+        <form class="container__form_card  action="email.php" method="post">
+            <fieldset>
+              <input type="text" name="name" placeholder="Ваше имя">
+              <input type="text" name="email" placeholder="E-mail">
+              <input type="text" name="phone" placeholder="Ваш номер телефона">
+              <textarea rows="10" cols="45" name="message" placeholder="Компания"></textarea>
+              <input id="btnForm" type="submit" value="Отправить сообщение">
+            </fieldset>
+          </form>
       </div>
     </section>
     <footer class="footer standard_container bg_content indent">
