--- a/forms.html
+++ b/forms.html
@@ -313,7 +313,7 @@
             </a>
           </div>
         </div>
-        <form class="container__form_card  action="email.php" method="post">
+        <form class="container__form_card"  action="email.php" method="post">
             <fieldset>
               <input type="text" name="name" placeholder="Ваше имя">
               <input type="text" name="email" placeholder="E-mail">
