--- a/forms.html
+++ b/forms.html
@@ -315,11 +315,12 @@
         </div>
         <form class="container__form_card"  action="email.php" method="post">
             <fieldset>
-              <input type="text" name="name" placeholder="Ваше имя">
-              <input type="text" name="email" placeholder="E-mail">
-              <input type="text" name="phone" placeholder="Ваш номер телефона">
+              <input class="input_form" type="text" name="name" placeholder="Ваше имя">
+              <input class="input_form" type="text" name="name" placeholder="Ваше имя">
+              <input class="input_form" type="text" name="email" placeholder="E-mail">
+              <input class="input_form" type="text" name="phone" placeholder="Ваш номер телефона">
               <textarea rows="10" cols="45" name="message" placeholder="Компания"></textarea>
-              <input id="btnForm" type="submit" value="Отправить сообщение">
+              <input class="input_form" id="btnForm" type="submit" value="Отправить сообщение">
             </fieldset>
           </form>
       </div>
