--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <div class="contetn__about_one standard_content content_info">
         <div class="text__solving_problemsabout_content-info">
           <h1><span>L</span>ets <span>S</span>erv - это</h1>
-          <h2><span>П</span>ланирование и реализация вашей IT инфрастукруры</h2>
+          <h2><span>П</span>ланирование и реализация вашей IT инфраструктуры</h2>
           <p>
             <span>М</span>ы подберем вам подходящее оборудование и настроим его
             под ваши нужды
@@ -313,16 +313,14 @@
           <img src="assets/imges/CloudUpdate.png" alt="" />
         </div>
         <div class="text__solving_problemsabout_content-problem">
-          <h1><span>К</span>ак справится со своей</h1>
+          <h1><span>К</span>ак справиться с</h1>
           <div>
             <p>
-              <span>П</span>роблемой с поддержкой пользователей и решением
-              технических проблем?
+              <span>- </span> Поддержкой пользователей и решением технических проблем?
             </p>
-            <p><span>П</span>роблемой с производительностью серверов и сети?</p>
+            <p><span>- </span> Производительностью серверов и архитектурой сети?</p>
             <p>
-              <span>П</span>роблемой с безопасностью данных и информационной
-              системы?
+              <span>- </span> Безопасностью данных и информационной инфраструктурой??
             </p>
             <p>
               <span>М</span>ы для этого и нужны. Мы поможем настроить или
@@ -337,10 +335,7 @@
           <h1><span>О</span> нас</h1>
           <p>
             <span>Lets Serv</span>
-            это сплоченная команда молодых и талантливых профессионалов в
-            области IT технологий. Мы являемся сертифицированными специалистами
-            и точно знаем, как оказывать услуги и применить наш опыт в вашей
-            организации.
+            это сплоченная команда талантливых профессионалов в области IT технологий. Мы являемся сертифицированными специалистами и точно знаем, как оказывать услуги и применить наш опыт для лучшего функционирования вашей IT инфраструктуры.
           </p>
         </div>
         <img src="assets/imges/Puzzle.png" alt="" />
@@ -376,7 +371,7 @@
             <h1><span>Б</span>езопасность</h1>
             <p>
               <span>В</span>аши данные всегда будут приватны и не разглашены.
-              Все обарудование будет надежно защищенно и проверенно на утечку
+              Все оборудование будет надежно защищено и проверенно на утечку
               информации.
             </p>
           </div>
@@ -452,7 +447,7 @@
             <h1><span>С</span>корость</h1>
             <p>
               <span>В</span>ы всегда будите получать быстрые ответы от нас. Не
-              все проекты делаются быстро, что бы не потерять его качаство.
+              все проекты делаются быстро, что бы не потерять его качество.
             </p>
           </div>
         </div>
