--- a/services.html
+++ b/services.html
@@ -301,6 +301,7 @@
           <a class="btn_form_form" href="forms.html">Заказать услугу</a>
         </div>
         <div class="img_services_bg">
+          <img src="assets/imges/BrowserConnection.png" alt="">
           <div></div>
         </div>
       </div>
