--- a/forms.html
+++ b/forms.html
@@ -298,7 +298,7 @@
             вопросы, а также подберем оптимальный набор услуг, который будет
             соответствовать вашим потребностям.
           </p>
-          <div class="svg__form_content">
+          <div class="map__content_form">
             <script
               type="text/javascript"
               charset="utf-8"
