--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <section class="container__about bg_content standard_container container__bg_gradient indent">
       <div class="contetn__about_one standard_content content_info">
         <div class="text__solving_problemsabout_content-info">
-          <h1><span>L</span>ets <span>S</span>erv - это</h1>
+          <h1><span>L</span>ets <span>S</span>erv</h1>
           <h2><span>П</span>ланирование и реализация вашей IT инфраструктуры</h2>
           <p>
             <span>М</span>ы подберем вам подходящее оборудование и настроим его
@@ -343,10 +343,10 @@
     </section>
     <section class="containret__our_partners standard_container bg_content indent"
     >
-      <h1><span>П</span>артнёры</h1>
+      <h1><span>К</span>лиенты</h1>
       <div class="our_partners">
         <img src="assets/imges/logo.com/Stolichka.png" alt="" />
-        <img src="assets/imges/logo.com/Matrix.png" alt="" />
+        <img src="assets/imges/logo.com/Matrix.jfif" alt="" />
         <img src="assets/imges/logo.com/neologo.png" alt="" />
         <img src="assets/imges/logo.com/Samokat.png" alt="" />
         <img src="assets/imges/logo.com/ShKI.png" alt="" />
@@ -354,7 +354,7 @@
       </div>
     </section>
     <section class="container__advantages standard_container bg_content">
-      <h1 class="indent"><span>Н</span>аши преимущества</h1>
+      <h1 class="indent"><span>П</span>реимущества</h1>
       <div class="wrapper__advantages indent">
         <div class="card card_1">
           <svg class="prem_svg" version="1.1" viewBox="-33 0 511 512">
@@ -536,7 +536,7 @@
       <h1><span>П</span>артнёры</h1>
       <div class="our_partners">
         <img src="assets/imges/logo.com/sigur.png" alt="" />
-        <img src="assets/imges/logo.com/Kiber.png" alt="" />
+        <img style="filter: grayscale(1) brightness(1000%);" src="assets/imges/logo.com/Kiber.png" alt="" />
         <img src="assets/imges/logo.com/Astra.png" alt="" />
         <img src="assets/imges/logo.com/redsoft.png" alt="" />
       </div>
