--- a/stands.html
+++ b/stands.html
@@ -309,12 +309,13 @@
           <img class="img_2" src="assets/imges/kryg.png" alt="" />
           <img class="img_3" src="assets/imges/kv.png" alt="" />
           <img class="img_4" src="assets/imges/treygol.png" alt="" />
+          <img class="img_0" src="assets/imges/stand0.png" alt="">
           <img class="img_5" src="assets/imges/Ellipse.png" alt="" />
         </div>
       </div>
       <div class="line"></div>
       <div class="content__stands_shop">
-        <h1><span>Н</span>аши учебные cтенды</h1>
+        <h1><span>У</span>чебные cтенды</h1>
         <div class="wrapper_stands" id="wrapperCard">
           <div class="card_stands">
             <img src="assets/imges/st1/01_Dozor_01.png" alt="" />
