--- a/forms.html
+++ b/forms.html
@@ -335,7 +335,7 @@
         Владимирская область, г.Владимир, ул.Большая Нижегородская, д.34Б, офис
         220.
       </p>
-      <p>letsserv@yandex.ru</p>
+      <a href="mailto:letsserv@yandex.ru">letsserv@yandex.ru</a>
     </footer>
     <script src="assets/js/index.js"></script>
   </body>
