--- a/forms.html
+++ b/forms.html
@@ -335,7 +335,10 @@
         Владимирская область, г.Владимир, ул.Большая Нижегородская, д.34Б, офис
         220.
       </p>
-      <a href="mailto:letsserv@yandex.ru">letsserv@yandex.ru</a>
+      <div>
+        <p>Все права защищены 2022-2024</p>
+        <a href="mailto:letsserv@yandex.ru"><span>l</span>etsserv@yandex.ru</a>
+      </div>
     </footer>
     <script src="assets/js/index.js"></script>
   </body>
