--- a/stands.html
+++ b/stands.html
@@ -318,7 +318,7 @@
         <h1><span>У</span>чебные cтенды</h1>
         <div class="wrapper_stands" id="wrapperCard">
           <div class="card_stands">
-            <img src="assets/imges/st1/01_Dozor_01.png" alt="" />
+            <img src="assets/imges/st1/01_Dozor_01.jpg" alt="" />
             <p><span>С</span>тенд видеоконтроля "ДОЗОР"</p>
             <samp>Стенд для обучение и тренировки...</samp>
             <div class="container__btn_stans">
@@ -326,7 +326,7 @@
             </div>
           </div>
           <div class="card_stands">
-            <img src="assets/imges/st3/03_Parus_01.png" alt="" />
+            <img src="assets/imges/st3/03_Parus_01.jpg" alt="" />
             <p><span>С</span>тенд беспроводной сети "Парус"</p>
             <samp>Стенд для обучение и тренировки...</samp>
             <div class="container__btn_stans">
@@ -334,7 +334,7 @@
             </div>
           </div>
           <div class="card_stands">
-            <img src="assets/imges/st2/02_Kluch_01.png" alt="" />
+            <img src="assets/imges/st2/02_Kluch_01.jpg" alt="" />
             <p><span>С</span>тенд контроля доступа "КЛЮЧ"</p>
             <samp>Стенд для обучение и тренировки...</samp>
             <div class="container__btn_stans">
